most stuff done
i forgor to commit frequently mb

--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,13 @@
 body {
     font-family: Arial, sans-serif;
 }
+
+.loading {
+    width: 150px;
+    height: 150px;
+    background-color: #007bff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
