--- a/css/result_container.css
+++ b/css/result_container.css
@@ -3,9 +3,9 @@
     align-items: center;
     gap: 10px;
     margin: 10px;
-    border: 1px solid rgb(147, 147, 147);
-    border-radius: 5px;
     padding: 10px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
 }
 
 .result-image {
