--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,19 @@ body {
     width: 150px;
     height: 150px;
     background-color: #007bff;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+}
+
+.error-message {
+    width: 250px;
+    height: auto;
+    padding: 20px;
+    position: fixed;
+    top: 40%;
+    left: 40%;
+    border: 2px solid #ff0000;
+    border-radius: 5px;
+    color:#ff0000;
 }
